force-app/main/default/objects/BET_BDD_Address__c/BET_BDD_Address__c.object-meta.xml
<CustomObject>
    <label>BDD Address</label>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>BET Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BDD Address</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>