force-app/main/default/objects/BET_BDD_Address__c/fields/AddLine1__c.field-meta.xml
<CustomField>
    <fullName>AddLine1__c</fullName>
    <label>* Address Line 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>