force-app/main/default/objects/BET_BDD_Address__c/fields/AddLine2__c.field-meta.xml
<CustomField>
    <fullName>AddLine2__c</fullName>
    <label>Address Line 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>