force-app/main/default/objects/BET_BDD_Address__c/fields/AddLine3__c.field-meta.xml
<CustomField>
    <fullName>AddLine3__c</fullName>
    <label>Address Line 3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>