force-app/main/default/objects/BET_BDD_Address__c/fields/BDD_Form__c.field-meta.xml
<CustomField>
    <fullName>BDD_Form__c</fullName>
    <label>BDD Form</label>
    <referenceTo>BET_BDD_Form__c</referenceTo>
    <relationshipLabel>BDD Address List</relationshipLabel>
    <relationshipName>BDD_Address</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>