force-app/main/default/objects/BET_BDD_Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>* City</label>
    <length>32</length>
    <type>Text</type>
</CustomField>