force-app/main/default/objects/BET_BDD_Address__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>* County (SENA Only)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>