force-app/main/default/objects/BET_BDD_Address__c/fields/PostCode__c.field-meta.xml
<CustomField>
    <fullName>PostCode__c</fullName>
    <inlineHelpText>Postal Code is required only for MDN Addresses</inlineHelpText>
    <label>* Postal Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>