force-app/main/default/objects/BET_BDD_Address__c/fields/Same_TR_AND_REGAdd__c.field-meta.xml
<CustomField>
    <fullName>Same_TR_AND_REGAdd__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is Trading Address and Registered Address are same?</inlineHelpText>
    <label>Same as Registered/Trading Address</label>
    <type>Checkbox</type>
</CustomField>