force-app/main/default/objects/BET_BDD_Address__c/fields/SameAs_LegAdd__c.field-meta.xml
<CustomField>
    <fullName>SameAs_LegAdd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same as Legal/Operating Address</label>
    <type>Checkbox</type>
</CustomField>