force-app/main/default/objects/BET_BDD_Address__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section</label>
    <type>Text</type>
</CustomField>