force-app/main/default/objects/BET_BDD_Address__c/fields/State_Lkp__c.field-meta.xml
<CustomField>
    <fullName>State_Lkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For GoldTier Addresses, State is only required if Country is US or Canada</inlineHelpText>
    <label>* State</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(3 AND 5 AND 2 AND 1) OR (4 AND 2 AND 1 AND 6)</booleanFilter>
        <errorMessage>Please enter a valid state for the specified country..</errorMessage>
        <filterItems>
            <field>$Source.Country__c</field>
            <operation>equals</operation>
            <valueField>BET_BDD_Country_vs_States__c.Country__c</valueField>
        </filterItems>
        <filterItems>
            <field>BET_BDD_Country_vs_States__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>State</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>GOLDTIER</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>MDN</value>
        </filterItems>
        <filterItems>
            <field>BET_BDD_Country_vs_States__c.Enable_for_GT__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>BET_BDD_Country_vs_States__c.Enable_for_MDN__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BET_BDD_Country_vs_States__c</referenceTo>
    <relationshipLabel>BDD Address</relationshipLabel>
    <relationshipName>BDD_Address</relationshipName>
    <type>Lookup</type>
</CustomField>