force-app/main/default/objects/BET_BDD_Address__c/recordTypes/GOLDTIER.recordType-meta.xml
<RecordType>
    <fullName>GOLDTIER</fullName>
    <active>true</active>
    <label>GOLDTIER</label>
</RecordType>