force-app/main/default/objects/BET_BDD_Address__c/recordTypes/MDN.recordType-meta.xml
<RecordType>
    <fullName>MDN</fullName>
    <active>true</active>
    <label>MDN</label>
</RecordType>